<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosapi</name>
  <version>0.0.1</version>
  <description>
    Provides service calls for getting ros meta-information, like list of
    topics, services, params, etc.
  </description>

  <license>TBD</license>
  
  <maintainer email="mwamp@me.me">mwamp</maintainer>
  <author email="mwamp@me.me">mwamp</author>

  <exec_depend>std_msgs</exec_depend>
 
  
  <build_depend>builtin_interfaces</build_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
